snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/error-0.3.0-20210927.134351-1.pom.sha1
9d9cd19b9bbbfec912cbd16a16db3ab72108dc58